[tool.poetry]
name = "ip-info"
version = "0.1.0"
description = "collect info about public ips"
authors = ["bakrfrag"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
django-channels = "^0.7.0"
jsonschema = "^4.23.0"
httpx = "^0.27.2"
daphne = "^4.1.2"
celery = "^5.4.0"
redis = "^5.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
